# evm_Ink_Rs

./: .env  Cargo.toml  readme.md  wallets.txt
src/: initialization.rs  lib.rs  main.rs
