[package]
name = "evm_ink_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
indoc = "2.0.4"
colored = { version = "2.0.4", features = [] }
fern = {version = "0.6.2", features = ["colored"]}
ethers = { version = "2.0.11", default-features = false }
bytes = "1.5.0"
rayon = { version = "1.8", features = [] }
serde = { version = "1.0", features = ["derive"] }
envy = "0.4"
dotenv = "0.15.0"
tokio = { version = "1.34.0", features = ["full"] }
thiserror = "1.0.50"
serde_json = "1.0.108"
chrono = "0.4.31"
reqwest = { version = "0.11", default-features = false }
eyre = "0.6"
async-trait = "0.1.74"
url = "2.5.0"
ethers-batch_request={git = "https://github.com/okeyzero/ethers-batch_request.git"}
regex = "1.10.2"
time = "0.3.30"